--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "eslint": "eslint --fix src test",
     "test": "jest",
     "package:clean": "rm -rf node_modules/ dist/ && mkdir -p dist/nodejs",
     "package:layer": "mv node_modules dist/nodejs/ && cd dist/ && zip -rq layer.zip . && cd ..",
     "package:src": "cd src/ && zip -rq src.zip . && mv src.zip ../dist/ && cd ..",
-    "package": "yarn package:clean && export SHARP_IGNORE_GLOBAL_LIBVIPS=1 npm_config_platform=linux npm_config_arch=x64 && yarn install --prod && yarn package:layer && yarn package:src && yarn"
+    "package": "yarn eslint && yarn test && yarn package:clean && export SHARP_IGNORE_GLOBAL_LIBVIPS=1 npm_config_platform=linux npm_config_arch=x64 && yarn install --prod && yarn package:layer && yarn package:src && yarn"
   },
   "dependencies": {
     "aws-sdk": "^2.995.0",
